--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "chart.js": "^2.9.3",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.27.0",
+        "moment-timezone": "^0.5.31",
         "sweetalert2": "^9.17.1",
         "swiper": "^6.1.1",
         "v-calendar": "^1.0.1",
